# Open-Learning

./: .gitignore  README.md
Algorithms-in-Engineering/: README.md
Algorithms-in-Engineering/AI/: .gitignore  反向传播.md
Algorithms-in-Engineering/有限元程序/: 有限元程序.md
Haskill/: KalmanFilter_Example.ipynb  Newmark_Method_Example.ipynb
Haskill/ipynb-tex/: KalmanFilter_Example.tex
HelloWorld/Abaqus/: check.py
HelloWorld/Coding/Fortran/C_F_int/: .gitignore  CMakeLists.txt  calculate.f90  main.c
HelloWorld/Coding/Fortran/hpc-demo/: .gitignore  CMakeLists.txt  main.f90  mkl_demo.f90
Language/CLisp_test/: t1.lisp
Language/Python/: 链表.py
Math-Theory/random-and-probability/: README.md
Math/Mathematica/: .gitignore  a-demo.md
Math/octave/: .gitignore
ProjectDevelopment/: 开发准则.md  项目开发管理方法.md  项目开发规范.md
Projects/AutoWordList/: awl.py  awl_epub.py  categorized_vocabulary_list_Karamazov.md  categorized_vocabulary_list_Karamazov_tmp.html  epub_read.py  example.md  vocabulary_list_Karamazov.md  vocabulary_list_ch01.md  word_categorieze.py  words_often.md
Projects/Copilot_Chat/: chat.json  index.html  json2notes.py  output.md
Projects/FourierSeriesShaping/: draw.py  draw_heart.ipynb  her.txt
Projects/Kalman_FaceMarks/: kalman_facemarks.ipynb
Projects/MapInfo/: map_info.ipynb
Random-and-Probability/: SUMMARY.md  probability-and-random-process.md  reliability-of-a-system.md  signal-process-and-system-monitoring.md
技能学习/: GitHub的使用技能.md  leetcode编程.md  写作风格.md  算法学习.md  编程风格.md
铁路相关/: SperlingIndex.md  getSperling.m  rail_pts.py  sperling_calc.py
(+311 files in other folders)
